fixtures/vc20/invalid/participant-expired.vc2.jsonld
{
  "@context": ["https://www.w3.org/ns/credentials/v2"],
  "type": ["VerifiableCredential"],
  "id": "https://example.com/vc/vc2-participant-expired",
  "issuer": "did:web:issuer.example.com",
  "validFrom": "2020-01-01T00:00:00Z",
  "validUntil": "2020-12-31T23:59:59Z",
  "credentialSubject": {
    "id": "did:web:participant.example.com",
    "@type": ["https://w3id.org/gaia-x/core#Participant"],
    "https://w3id.org/gaia-x/core#legalName": [{"@value": "Example Corp Expired"}]
  }
}
